src/test/deca/syntax/valid/parser/oracle/class_with_two_methods.deca
class A{
  float f(int x, float f){
    int i = 0;
    println(i);
  }

  int xf(int x){
    println(x);
  }
}