src/test/deca/syntax/invalid/parser/oracle/method_block_invalid4.deca
class A { a a (a a) {int i = float f;} }